--- a/index.html
+++ b/index.html
@@ -331,6 +331,8 @@
     </div>
     <!---------------------- PATIENTS end--------------------------->
     <!---------------------- QUOTE start --------------------------->
+    <div style="background-image: url('assets/img/background3.svg')">
+
     <div class="quote">
       <div class="quote__box">
         <div class="quote__l1">Get a quote</div>
@@ -362,6 +364,7 @@
       </div>
       <!---------------------- End end --------------------------->
     </div>
+  </div>
     <!---------------------- QUOTE end --------------------------->
   </body>
 </html>
