--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
     </div>
     <!---------------------- RESULT end--------------------------->
     <!---------------------- WHY start--------------------------->
+            <div style="background-image: url('assets/img/bg5.svg')">
 
     <div class="why">
       <div class="why__head">
@@ -185,9 +186,11 @@
         </div>
       </div>
     </div>
+  </div>
     <!---------------------- WHY end--------------------------->
 
     <!---------------------- GET start--------------------------->
+
     <div class="get">
       <div class="get__left">
         <div class="get__left__l1">Get your vaccine registration today</div>
@@ -228,6 +231,8 @@
     </div>
     <!---------------------- GET end--------------------------->
     <!---------------------- SYMPTOMS start--------------------------->
+        <div style="background-image: url('assets/img/bg5.svg')">
+
     <div class="symptoms">
       <div class="symptoms__top">
         <div class="symptoms__top__l1">Covid-19 Prevention</div>
@@ -245,8 +250,11 @@
         <img src="assets/img/symptoms2.svg" class="symptoms__bottom__pic" />
       </div>
     </div>
+  </div>
     <!---------------------- SYMPTOMS end--------------------------->
     <!---------------------- PATIENTS start--------------------------->
+    <div style="background-image: url('assets/img/bg6.svg')">
+
     <div class="patients">
       <div class="patients__top">
         <div class="patients__top__l1">FEEDBACK</div>
@@ -329,6 +337,7 @@
         </div>
       </div>
     </div>
+  </div>
     <!---------------------- PATIENTS end--------------------------->
     <!---------------------- QUOTE start --------------------------->
     <div style="background-image: url('assets/img/background3.svg')">
