--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@
     </div>
     <!----------------------STRIPE end---s------------------------>
     <!---------------------- RESULT start--------------------------->
+    <div style="background-image: url('assets/img/background2.svg')">
+
     <div class="result">
       <div class="result__box">
         <div class="result__box__1">
@@ -131,9 +133,11 @@
         </div>
       </div>
     </div>
+  </div>
     <!---------------------- RESULT end--------------------------->
     <!---------------------- WHY start--------------------------->
-            <div style="background-image: url('assets/img/bg5.svg')">
+            <div style="background-image: url('assets/img/bg3.svg')">
+
 
     <div class="why">
       <div class="why__head">
