--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <!----------------------TOP start------------------------------->
+                <div style="background-image: url('assets/img/backImg.svg')">
+
     <div class="top">
       <!----------------------TOP BAR start--------------------------->
       <div class="bar">
@@ -92,6 +94,7 @@
       </div>
       <!----------------------VACCINE end--------------------------->
     </div>
+  </div>
     <!----------------------TOP end--------------------------->
 
     <!----------------------STRIPE start--------------------------->
@@ -136,7 +139,7 @@
   </div>
     <!---------------------- RESULT end--------------------------->
     <!---------------------- WHY start--------------------------->
-            <div style="background-image: url('assets/img/bg3.svg')">
+            <div style="background-image: url('assets/img/background3.svg')">
 
 
     <div class="why">
