--- a/index.html
+++ b/index.html
@@ -276,6 +276,8 @@
       <div class="patients__bottom">
         <!--------------- PATIENT 1 ------------------->
         <div class="patients__bottom__bg">
+        <div style="background-image: url('assets/img/vaccine.svg')">
+
           <div class="patients__bottom__1">
             <div class="patients__bottom__1__top">
               <img src="assets/img/pep1.svg" />
@@ -297,8 +299,11 @@
             </div>
           </div>
         </div>
+        </div>
         <!--------------- PATIENT 2 ------------------->
         <div class="patients__bottom__bg">
+          <div style="background-image: url('assets/img/vaccine.svg')">
+
           <div class="patients__bottom__2">
             <div class="patients__bottom__2__top">
               <img src="assets/img/pep2.svg" />
@@ -319,8 +324,11 @@
             </div>
           </div>
         </div>
+        </div>
         <!--------------- PATIENT 3 ------------------->
         <div class="patients__bottom__bg">
+       <div style="background-image: url('assets/img/vaccine.svg')">
+
           <div class="patients__bottom__3">
             <div class="patients__bottom__3__top">
               <img src="assets/img/pep3.svg" />
@@ -345,6 +353,7 @@
       </div>
     </div>
   </div>
+    </div>
     <!---------------------- PATIENTS end--------------------------->
     <!---------------------- QUOTE start --------------------------->
     <div style="background-image: url('assets/img/background3.svg')">
