--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
   </div>
     <!---------------------- SYMPTOMS end--------------------------->
     <!---------------------- PATIENTS start--------------------------->
-    <div style="background-image: url('assets/img/bg6.svg')">
+    <div style="background-image: url('assets/img/bg6.svg'); width: 300px; height: 478.557px; display: flex; justify-content: space-between; align-items: center; margin-top: -70px;">
 
     <div class="patients">
       <div class="patients__top">
@@ -302,8 +302,7 @@
         </div>
         <!--------------- PATIENT 2 ------------------->
         <div class="patients__bottom__bg">
-          <div style="background-image: url('assets/img/vaccine.svg')">
-
+<div style="background-image: url('assets/img/bg6.svg'); width: 300px; height: 478.557px; display: flex; justify-content: space-between; align-items: center; margin-top: -70px;">
           <div class="patients__bottom__2">
             <div class="patients__bottom__2__top">
               <img src="assets/img/pep2.svg" />
@@ -327,8 +326,8 @@
         </div>
         <!--------------- PATIENT 3 ------------------->
         <div class="patients__bottom__bg">
-       <div style="background-image: url('assets/img/vaccine.svg')">
-
+<div style="background-image: url('assets/img/bg6.svg'); width: 300px; height: 478.557px; display: flex; justify-content: space-between; align-items: center; margin-top: -70px;">
+  
           <div class="patients__bottom__3">
             <div class="patients__bottom__3__top">
               <img src="assets/img/pep3.svg" />
