--- a/index.html
+++ b/index.html
@@ -260,8 +260,7 @@
   </div>
     <!---------------------- SYMPTOMS end--------------------------->
     <!---------------------- PATIENTS start--------------------------->
-    <div style="background-image: url('assets/img/bg6.svg'); width: 300px; height: 478.557px; display: flex; justify-content: space-between; align-items: center; margin-top: -70px;">
-
+    
     <div class="patients">
       <div class="patients__top">
         <div class="patients__top__l1">FEEDBACK</div>
@@ -276,7 +275,7 @@
       <div class="patients__bottom">
         <!--------------- PATIENT 1 ------------------->
         <div class="patients__bottom__bg">
-        <div style="background-image: url('assets/img/vaccine.svg')">
+    <div style="background-image: url('assets/img/bg6.svg')">
 
           <div class="patients__bottom__1">
             <div class="patients__bottom__1__top">
@@ -300,9 +299,10 @@
           </div>
         </div>
         </div>
+        </div>
         <!--------------- PATIENT 2 ------------------->
         <div class="patients__bottom__bg">
-<div style="background-image: url('assets/img/bg6.svg'); width: 300px; height: 478.557px; display: flex; justify-content: space-between; align-items: center; margin-top: -70px;">
+<div style="background-image: url('assets/img/bg6.svg')">
           <div class="patients__bottom__2">
             <div class="patients__bottom__2__top">
               <img src="assets/img/pep2.svg" />
@@ -326,7 +326,7 @@
         </div>
         <!--------------- PATIENT 3 ------------------->
         <div class="patients__bottom__bg">
-<div style="background-image: url('assets/img/bg6.svg'); width: 300px; height: 478.557px; display: flex; justify-content: space-between; align-items: center; margin-top: -70px;">
+<div style="background-image: url('assets/img/bg6.svg')">
   
           <div class="patients__bottom__3">
             <div class="patients__bottom__3__top">
