--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
       <div class="patients__bottom">
         <!--------------- PATIENT 1 ------------------->
         <div class="patients__bottom__bg">
-    <div style="background-image: url('assets/img/bg6.svg')">
+    <div style="background-image: url('assets/img/vaccine.svg')">
 
           <div class="patients__bottom__1">
             <div class="patients__bottom__1__top">
@@ -301,7 +301,7 @@
         </div>
         <!--------------- PATIENT 2 ------------------->
         <div class="patients__bottom__bg">
-<div style="background-image: url('assets/img/bg6.svg')">
+<div style="background-image: url('assets/img/vaccine.svg')">
           <div class="patients__bottom__2">
             <div class="patients__bottom__2__top">
               <img src="assets/img/pep2.svg" />
@@ -325,7 +325,7 @@
         </div>
         <!--------------- PATIENT 3 ------------------->
         <div class="patients__bottom__bg">
-<div style="background-image: url('assets/img/bg6.svg')">
+<div style="background-image: url('assets/img/vaccine.svg')">
   
           <div class="patients__bottom__3">
             <div class="patients__bottom__3__top">
