--- a/index.html
+++ b/index.html
@@ -274,8 +274,7 @@
       </div>
       <div class="patients__bottom">
         <!--------------- PATIENT 1 ------------------->
-        <div class="patients__bottom__bg">
-    <div style="background-image: url('assets/img/vaccine.svg')">
+        <div class="patients__bottom__bg" style="background-image: url('assets/img/vaccine.svg')">
 
           <div class="patients__bottom__1">
             <div class="patients__bottom__1__top">
@@ -298,10 +297,8 @@
             </div>
           </div>
         </div>
-        </div>
         <!--------------- PATIENT 2 ------------------->
-        <div class="patients__bottom__bg">
-<div style="background-image: url('assets/img/vaccine.svg')">
+        <div class="patients__bottom__bg" style="background-image: url('assets/img/vaccine.svg')">
           <div class="patients__bottom__2">
             <div class="patients__bottom__2__top">
               <img src="assets/img/pep2.svg" />
@@ -322,10 +319,8 @@
             </div>
           </div>
         </div>
-        </div>
         <!--------------- PATIENT 3 ------------------->
-        <div class="patients__bottom__bg">
-<div style="background-image: url('assets/img/vaccine.svg')">
+        <div class="patients__bottom__bg" style="background-image: url('assets/img/vaccine.svg')">
   
           <div class="patients__bottom__3">
             <div class="patients__bottom__3__top">
@@ -348,7 +343,6 @@
             </div>
           </div>
         </div>
-      </div>
     </div>
   </div>
     <!---------------------- PATIENTS end--------------------------->
