--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     </div>
     <!----------------------STRIPE end---s------------------------>
     <!---------------------- RESULT start--------------------------->
-    <div style="background-image: url('assets/img/background2.svg')">
+    <div style="background-image: url('assets/img/background2.svg'); background-repeat: no-repeat;">
 
     <div class="result">
       <div class="result__box">
@@ -139,7 +139,7 @@
   </div>
     <!---------------------- RESULT end--------------------------->
     <!---------------------- WHY start--------------------------->
-            <div style="background-image: url('assets/img/background3.svg')">
+            <div style="background-image: url('assets/img/background3.svg'); background-repeat: no-repeat;">
 
 
     <div class="why">
@@ -238,7 +238,7 @@
     </div>
     <!---------------------- GET end--------------------------->
     <!---------------------- SYMPTOMS start--------------------------->
-        <div style="background-image: url('assets/img/bg5.svg')">
+        <div style="background-image: url('assets/img/bg5.svg');background-repeat: no-repeat;">
 
     <div class="symptoms">
       <div class="symptoms__top">
@@ -347,7 +347,7 @@
   </div>
     <!---------------------- PATIENTS end--------------------------->
     <!---------------------- QUOTE start --------------------------->
-    <div style="background-image: url('assets/img/background3.svg')">
+    <div style="background-image: url('assets/img/background3.svg');background-repeat: no-repeat;">
 
     <div class="quote">
       <div class="quote__box">
